--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
 </head>
-<body>
+<body id="content">
     <div id="main-container">
         <header>
-            <h1>Une petit modale en CSS et Javascript</h1>
+            <h1>Modal in CSS and Javascript</h1>
         </header>
         <button id="event" class="btn">Click on me</button>
     </div>
-    <div id="content"></div>
 </body>
 </html>
